5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1798_2567.log
== TEST (2019-06-08 12:07:54) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))
cont = 0
for elemento in range(size(a)):
	a[i] = a[i] - cont
	print()
	cont = cont + 1
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:14:51) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))
cont = 0

for elemento in range(size(a)):
	A = ("*" * size(a)) - "*"
	print(A)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:15:48) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))
cont = 0
s = "*"
for elemento in range(size(a)):
	A = (s * size(a)) - s
	print(A)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:16:09) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))
cont = 0
s = "*"
for elemento in range(size(a)):
	A = (s * size(a))
	print(A)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:16:42) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))
cont = 0
s = "*"
for i in range(size(a)):
	A = (s * a[i])
	print(A)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:17:36) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))
cont = 0
s = "*"
for i in range(size(a)):
	A = "*" * a
	print(A)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:29:14) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

for i in range(a):
	v = len(a) * "*"
	print(v)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:35:37) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

for i in range(a):
	v = "*" * a
	print(v)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:36:51) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

for i in range(a):
	v = * * a
	print(v)

	
	
	
-- ERROR:
File "XXXX", line 5
    v = * * a
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:37:04) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

for i in range(a):
	v = '*' * a
	print(v)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:43:53) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a)
	print(b)

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:47:47) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a)
	E = b
	print(E)
	E = b - "*"
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:48:12) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a)
	E = b
	print(E)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:49:10) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a) - len(E)
	E = b
	print(E)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:49:28) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a) - E
	E = b
	print(E)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:49:29) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a) - E
	E = b
	print(E)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:49:40) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a)
	E = b
	print(E)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:49:44) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a)
	E = b
	print(E)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:50:28) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

b = 0
for i in range(sum(a)):
	b = "*" * sum(a - b)
	E = b
	print(E)
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:51:21) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a)
	E = b
	print(E)
	E = b - "*"
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:51:38) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a)
	E = b
	print(E)
	E = "*"  - b
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:54:49) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a)
	E = b
	print(E)
	sum(a) = sum(a) - 1
	
	

	
	
	
-- ERROR:
File "XXXX", line 9
    sum(a) = sum(a) - 1
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:55:06) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
for i in range(sum(a)):
	b = "*" * sum(a)
	E = b
	print(E)
	soma = sum(a) - 1
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:56:36) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
soma = sum(a)
for i in range(sum(a)):
	b = "*" * soma
	E = b
	print(E)
	soma = sum(a) - 1
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:56:44) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
soma = sum(a)
for i in range(sum(a)):
	b = "*" * soma
	E = b
	print(E)
	soma = sum(a) - 1
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:58:08) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
soma = sum(a)
for i in range(sum(a)):
	b = "*" * soma
	print(b)
	soma = sum(a) - 1
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:59:53) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
soma = sum(a)
for i in range(sum(a)):
	b = "*" * soma
	soma = sum(a) - 1
	print(b)
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:01:14) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

E = ""
soma = sum(a)
while (sum(a) > 1):
	for i in range(sum(a)):
		b = "*" * soma
		print(b)
	soma = sum(a) - 1
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:05:24) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	print(b)
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:05:44) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	print(b)
	c = c + 1
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:06:41) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:06:53) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:07:18) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:07:28) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:10:43) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
soma = 0
for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) + c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:14:18) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
soma = sum(a) + c
c = sum(a)
for i in range(sum(a)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:16:57) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:17:23) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:17:32) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- EXECUTION TIME:
1.2971
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:17:35) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:17:52) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:18:00) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:18:59) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:20:24) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 2
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:20:37) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:22:43) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a + 1)):
	if (soma == 0):
		b = "*"
		print(b)
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:23:40) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a + 1)):
	if (soma == 0):
		b = "*"
		print(b)
	soma = soma + 1
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
File "XXXX", line 19
    elif(soma > 0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:23:54) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a + 1)):
	if (soma == 0):
		b = "*"
		print(b)
		soma = soma + 1
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:24:15) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a + 1)):
	if (soma == 0):
		b = "*"
		print(b)
		soma = soma + 2
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:29:22) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a + 1)):
	if (soma == 0):
		b = "*"
		print(b)
		soma = soma + 2
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:30:31) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a + 1)
soma = 0
for i in range(sum(a + 1)):
	if (soma == 0):
		b = "*"
		print(b)
		soma = soma + 2
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:30:45) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a + 1)):
	if (soma == 0):
		b = "*"
		print(b)
		soma = soma + 2
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:32:02) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a)):
	if (soma == 0):
		b = "*"
		print(b)
		soma = soma + 2
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:32:12) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a)):
	if (soma == 0):
		b = "*"
		print(b)
		soma = soma + 2
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:32:43) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a + 1)):
	if (soma == 0):
		b = "*"
		print(b)
		soma = soma + 2
	elif(soma > 0):
		b = "*" * soma
		c = c - 1
		print(b)
		soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:33:44) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:34:07) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 0
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:35:20) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a + 1) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:36:20) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a + 1)
soma = 1
for i in range(sum(a)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:37:18) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a + 1)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:38:42) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a + 1)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:39:00) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:41:11) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a + 1)):
	b = "*" * soma
	c = c - 2
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:41:38) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a)
soma = 1
for i in range(sum(a)):
	b = "*" * soma
	c = c - 2
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 13:46:31) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a) - 1
soma = 1
for i in range(sum(a)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 13:46:46) 
-- CODE:
from numpy import*
a = array(eval(input("Entrada: ")))

c = 0
soma = sum(a) - c

for i in range(sum(a)):
	b = "*" * soma
	c = c + 1
	print(b)
	soma = sum(a) - c
c = sum(a) - 1
soma = 1
for i in range(sum(a)):
	b = "*" * soma
	c = c - 1
	print(b)
	soma = sum(a) - c
	
	
	
	

	
	
	
-- EXECUTION TIME:
1.21272
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
